' Generated by UML Generator
' Encoded: hLTDRnCn4BtdLrWz9P1GpX5KZPeYAhKeeYWNn67YjLABtNMmdQXG-jyPxww_rjwGIhr0EcE_UNxpOU-bqY3rlYf7wYUlTo2X8hG4fHPQIxxPQtP3HNtF_p3oVlJ02qOebxHaer6pYjm1hydJY92tJuYaENqc5Ph68BTgJkuHezv-_p6PauFWnUZPRbjiMLr0nMejcjspYXMSYZcvQ_utbXrGZdus9wlkbx4MeE5Ar6fVQfYJMq6XN4Bheb3n-a7OgEGZEVlsYTTGdYj9pzkV2_bhpmz2dOCd4F_nJZ_gCmCtCuSAU8vZYbEI4foI0NeJWrLmvngZ81iXIWQryQ32c8KWbZ8BUAsDKxDg3LjGlJsIRRdICjesJdK-GCc1majLPefAZjkicCR8C1n3LCkiKyX6E4sVFl2KHB2DK5kcMmnp7aVLc2sGSGHyZMjfaOtFaJQUwov0eAaNpx5FfBEvUdbzXg9bbPICCXwlOu-OGXLQa9cGAzZYpaBiDoLpahigEhKYlTWP_NjaC24HbIb9Y1nBadBcc9oLztWULU1A3nDZO5z1d6lL6SCZz_RaYqI5daIY6E9hArS2OEqzEUFDrusqoTxE70iVxrpR99ZDhXxCPkz94-KXNCM78oWfU5lj-TfkyFrqyrMfkDwR9iBOxI0A9vMhMOoPAz0iwfGCOqvUiOZMOV2yjCwR9Hh0SNNVvzoRsGYPBZboK9yXs9ZaKKswMxVfgJPNjQXOFAPtZ78SQmKKB1aekVI16O9KcD9RI0c_Rx5IFhZ9UD4KH0crK4js3ti3wfUry1SkprtpXwJCYCzG6iXyarr042vga2iJTzn4p_H5OryRt7HD87jGAsebv993S1MWymkIpTmQ0UV4UwHkqBkmWXhFWAJ-ZFuE0ljhxY_kf4rRXQz05boKmdHrsxHlCuvU7eO5_--H1WJiiLeoMO7EqOezB-4rdBeJqtzACVNEiS9_0HikF86rlG9t5ytwyvtSjKltscfuT_tdrpoWd48s5wqlD4l7jwKRY35v7m4V3md-PB0_L6SCqUB1UcFRfikLiYOVilSaSE6JK84hGp92-MpbY3il5CGW-cN7zHluRhaL6WguVgHifx6osYh9kXg5xhgNa7k4XU-Jp5lzfZuqSwSVOD0_3b0QiReLeeUGz-5BJIdy18eeXHzeRsOp-yBhczszwpyqmjMHqQrrB-jWQMGBL_PDtTKdqERWHxcPE9lzlR3esUcKBd1j7xfSZvgGbkRe4dN0h-P_
' URL: http://www.plantuml.com/plantuml/uml/hLTDRnCn4BtdLrWz9P1GpX5KZPeYAhKeeYWNn67YjLABtNMmdQXG-jyPxww_rjwGIhr0EcE_UNxpOU-bqY3rlYf7wYUlTo2X8hG4fHPQIxxPQtP3HNtF_p3oVlJ02qOebxHaer6pYjm1hydJY92tJuYaENqc5Ph68BTgJkuHezv-_p6PauFWnUZPRbjiMLr0nMejcjspYXMSYZcvQ_utbXrGZdus9wlkbx4MeE5Ar6fVQfYJMq6XN4Bheb3n-a7OgEGZEVlsYTTGdYj9pzkV2_bhpmz2dOCd4F_nJZ_gCmCtCuSAU8vZYbEI4foI0NeJWrLmvngZ81iXIWQryQ32c8KWbZ8BUAsDKxDg3LjGlJsIRRdICjesJdK-GCc1majLPefAZjkicCR8C1n3LCkiKyX6E4sVFl2KHB2DK5kcMmnp7aVLc2sGSGHyZMjfaOtFaJQUwov0eAaNpx5FfBEvUdbzXg9bbPICCXwlOu-OGXLQa9cGAzZYpaBiDoLpahigEhKYlTWP_NjaC24HbIb9Y1nBadBcc9oLztWULU1A3nDZO5z1d6lL6SCZz_RaYqI5daIY6E9hArS2OEqzEUFDrusqoTxE70iVxrpR99ZDhXxCPkz94-KXNCM78oWfU5lj-TfkyFrqyrMfkDwR9iBOxI0A9vMhMOoPAz0iwfGCOqvUiOZMOV2yjCwR9Hh0SNNVvzoRsGYPBZboK9yXs9ZaKKswMxVfgJPNjQXOFAPtZ78SQmKKB1aekVI16O9KcD9RI0c_Rx5IFhZ9UD4KH0crK4js3ti3wfUry1SkprtpXwJCYCzG6iXyarr042vga2iJTzn4p_H5OryRt7HD87jGAsebv993S1MWymkIpTmQ0UV4UwHkqBkmWXhFWAJ-ZFuE0ljhxY_kf4rRXQz05boKmdHrsxHlCuvU7eO5_--H1WJiiLeoMO7EqOezB-4rdBeJqtzACVNEiS9_0HikF86rlG9t5ytwyvtSjKltscfuT_tdrpoWd48s5wqlD4l7jwKRY35v7m4V3md-PB0_L6SCqUB1UcFRfikLiYOVilSaSE6JK84hGp92-MpbY3il5CGW-cN7zHluRhaL6WguVgHifx6osYh9kXg5xhgNa7k4XU-Jp5lzfZuqSwSVOD0_3b0QiReLeeUGz-5BJIdy18eeXHzeRsOp-yBhczszwpyqmjMHqQrrB-jWQMGBL_PDtTKdqERWHxcPE9lzlR3esUcKBd1j7xfSZvgGbkRe4dN0h-P_
' Generated on: 2026-05-31T17:13:47.015645100

@startuml
skinparam classAttributeIconSize 0
hide circle

class Main {
  +{static} main(args: String[]): void
}

class Agendamento {
  -medico: Medico
  -paciente: Paciente
  -dataConsulta: LocalDate
  -caminho: String = "TFinal/src/TFinalArquivos/agendamentos/agendamentos.txt"
  --
  +Agendamento(medico: Medico, paciente: Paciente, dataConsulta: LocalDate)
  +diaConsulta(): boolean
  +contarAgendamentos(): int
  +temVagas(): boolean
  +registrarAgendamento(): void
}

class Avaliacao {
  -medico: Medico
  -paciente: Paciente
  -descricao: String
  -estrelas: int
  --
  +Avaliacao(medico: Medico, paciente: Paciente, descricao: String, estrelas: int)
  +getMedico(): Medico
  +getPaciente(): Paciente
  +getDescricao(): String
  +getEstrelas(): int
  +registrarAvaliacao(): void
}

class Consulta {
  -medico: Medico
  -paciente: Paciente
  -data: String
  -descricao: String
  -receita: String
  -exames: String
  -valorPago: double
  --
  +Consulta(medico: Medico, paciente: Paciente, data: String, descricao: String, receita: String, exames: String, valorPago: double)
  +getMedico(): Medico
  +setMedico(medico: Medico): void
  +getPaciente(): Paciente
  +setPaciente(paciente: Paciente): void
  +getData(): String
  +setData(data: String): void
  +getDescricao(): String
  +setDescricao(descricao: String): void
  +getReceita(): String
  +setReceita(receita: String): void
  +getExames(): String
  +setExames(exames: String): void
  +getValorPago(): double
  +setValorPago(valorPago: double): void
  +registrarConsulta(): void
}

class Conta {
  -paciente: Paciente
  -valorConsulta: double
  -situacaoPagamento: boolean
  --
  +Conta(paciente: Paciente, valorConsulta: double, situacaoPagamento: boolean)
  +getPaciente(): Paciente
  +setPaciente(paciente: Paciente): void
  +getValorConsulta(): double
  +setValorConsulta(valorConsulta: double): void
  +isSituacaoPagamento(): boolean
  +setSituacaoPagamento(situacaoPagamento: boolean): void
}

abstract class Medico {
  -nome: String
  -especialidade: String
  -valorConsulta: double
  -avalicoes: ArrayList<Avaliacao>
  -planosDeSaude: ArrayList<String>
  --
  +Medico(nome: String, especialidade: String, valorConsulta: double)
  +adicionarPlano(plano: String): void
  +planoValido(plano: String): boolean
  +getPacientesPorDia(): int
  +getNome(): String
  +getEspecialidade(): String
  +getValorConsulta(): double
  +getAvalicoes(): ArrayList<Avaliacao>
  +adicionarAvaliacao(avaliacao: Avaliacao): void
}

class MedicoCardiologista {
  +MedicoCardiologista(nome: String, valorConsulta: double)
  +getValorConsulta(): double
  +getPacientesPorDia(): int
}

class MedicoDermatologista {
  +MedicoDermatologista(nome: String, valorConsulta: double)
  +getPacientesPorDia(): int
  +planoValido(plano: String): boolean
  +adicionarPlano(plano: String): void
}

class MedicoPediatra {
  +MedicoPediatra(nome: String, valorConsulta: double)
  +getPacientesPorDia(): int
}

class Paciente {
  -nome: String
  -idade: int
  -planoSaude: String
  -historico: ArrayList<Consulta>
  --
  +Paciente(nome: String, idade: int, planoSaude: String)
  +getNome(): String
  +setNome(nome: String): void
  +getIdade(): int
  +setIdade(idade: int): void
  +getPlanoSaude(): String
  +setPlanoSaude(planoSaude: String): void
  +getHistorico(): ArrayList<Consulta>
  +setHistorico(historico: ArrayList<Consulta>): void
}

class AgendaLotadaException {
  +AgendaLotadaException(nomeMedico: String, data: String)
}

class AvaliacaoInvalidaException {
  +AvaliacaoInvalidaException()
}

class PlanoInvalidoException {
  +PlanoInvalidoException(message: String)
}

Agendamento *-- Medico
Agendamento *-- Paciente
Avaliacao *-- Medico
Avaliacao *-- Paciente
Consulta *-- Medico
Consulta *-- Paciente
Conta *-- Paciente
Medico o-- Avaliacao
MedicoCardiologista --|> Medico
MedicoDermatologista --|> Medico
MedicoPediatra --|> Medico
Paciente o-- Consulta
@enduml